--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
-    "vitepress": "1.0.0-alpha.76"
+    "vitepress": "1.0.0-beta.5"
   },
   "dependencies": {
     "xmind-embed-viewer": "^1.1.0"
