--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,14 +17,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: npm
       - uses: pnpm/action-setup@v2
         with:
           version: 8
           run_install: true
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: pnpm
       - run: pnpm i
       - name: Build
         run: pnpm run docs:build
