--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
-    "vitepress": "1.0.0-beta.5",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "vitepress": "1.0.0-beta.5"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.22",
     "jsdom": "^22.1.0",
     "xmind-embed-viewer": "^1.1.0"
   },
